<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>cango_master</name>
  <version>0.0.0</version>
  <description>cango_master</description>

  <maintainer email="sunkyoung.lee@TODO.com">Sunkyoung Lee</maintainer>
  <author email="sunkyoung.lee@TODO.com">Sunkyoung Lee</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>cango_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
